  * [DiameterAgent] Added DPR support
  * [SupplierS] Add verification for event filters before populating
    data
  * [ERs] Add support for *json type
  * [AgentS] Add ability to inject data in cache from agents
  * [Config] Config cache format change to include partitions
  * [ERs] Add *none EventReader type
  * [SessionS] Added support for *stir_authenticate
  * [SessionS] Added support for *stir_initiate
  * [RouteS] Renaming from SupplierS to RouteS
  * [AgentS] Improved NavigableMap
  * [General] Default timingIDs start from time.Now() (i.e. *monthly time.Now() + 1 month )
  * [AgentS] FieldAsInterface return data instead of NMItem
  * [RouteS] Add posibility to load routes with the sameID and different filters
  * [RouteS] Correctly populate Sorting out of models
  * [AgentS] Added SIPAgent for SIP redirection
  * [AgentS] Added *constant: prefix to do not proccess the value
    with RSRParsers
  * [AgentS] Added DynamicDataProvider to AgentRequest
  * [Server] Corectly log the server listen error
  * [ERs] Added support to reference CSV fields by the column name

 -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200

cgrates (0.10.0) UNRELEASED; urgency=medium

  * Creating first stable branch. 

 -- DanB <danb@cgrates.org>  Thu, 6 Feb 2020 12:05:00 +0200

cgrates (0.9.1~rc8) UNRELEASED; urgency=medium

  * RC8.

 -- DanB <danb@cgrates.org>  Mon, 22 Sep 2015 12:05:00 +0200

cgrates (0.9.1~rc7) UNRELEASED; urgency=low

  * RC7.

 -- DanB <danb@cgrates.org>  Wed, 3 Aug 2015 14:04:00 -0600

cgrates (0.9.1~rc6) UNRELEASED; urgency=low

  * RC6.

 -- DanB <danb@cgrates.org>  Wed, 10 Sep 2014 13:30:00 +0100

cgrates (0.9.1~rc5) UNRELEASED; urgency=low

  * RC5.

 -- DanB <danb@cgrates.org>  Mon, 18 Aug 2014 13:30:00 +0100


cgrates (0.9.1~rc4) UNRELEASED; urgency=low

  * RC4.

 -- DanB <danb@cgrates.org>  Thu, 25 Mar 2014 17:30:00 +0100

cgrates (0.9.1~rc3) UNRELEASED; urgency=low

  * RC3.

 -- DanB <danb@cgrates.org>  Fri, 03 Jan 2014 17:37:31 +0100