@@ -1816,8 +1816,8 @@ func TestCgrCdfEventReader(t *testing.T) {
 				HeaderDefineChar: ":",
 				RunDelay:         time.Duration(0),
 				ConcurrentReqs:   1024,
-				SourcePath:       "/var/spool/cgrates/cdrc/in",
-				ProcessedPath:    "/var/spool/cgrates/cdrc/out",
+				SourcePath:       "/var/spool/cgrates/ers/in",
+				ProcessedPath:    "/var/spool/cgrates/ers/out",
 				XmlRootPath:      utils.HierarchyPath{utils.EmptyString},
 				Tenant:           nil,
 				Timezone:         utils.EmptyString,
@@ -2110,8 +2110,8 @@ func TestCgrCfgEventReaderDefault(t *testing.T) {
 		HeaderDefineChar: ":",
 		RunDelay:         time.Duration(0),
 		ConcurrentReqs:   1024,
-		SourcePath:       "/var/spool/cgrates/cdrc/in",
-		ProcessedPath:    "/var/spool/cgrates/cdrc/out",
+		SourcePath:       "/var/spool/cgrates/ers/in",
+		ProcessedPath:    "/var/spool/cgrates/ers/out",
 		XmlRootPath:      utils.HierarchyPath{utils.EmptyString},
 		Tenant:           nil,
 		Timezone:         utils.EmptyString,
