@@ -51,7 +51,7 @@ func TestKafkaER(t *testing.T) {
 			"run_delay":  "-1",									// sleep interval in seconds between consecutive runs, -1 to use automation via inotify or 0 to disable running all together
 			"concurrent_requests": 1024,						// maximum simultaneous requests/files to process, 0 for unlimited
 			"source_path": "localhost:9092",					// read data from this path
-			// "processed_path": "/var/spool/cgrates/cdrc/out",	// move processed data here
+			// "processed_path": "/var/spool/cgrates/ers/out",	// move processed data here
 			"tenant": "cgrates.org",							// tenant used by import
 			"filters": [],										// limit parsing based on the filters
 			"flags": [],										// flags to influence the event processing
